--- a/sass/components/webstudio/_section-3.scss
+++ b/sass/components/webstudio/_section-3.scss
@@ -1,8 +1,8 @@
 .business {
   &__cards {
-    width: 100%;
+    // width: 100%;
     @extend %standard-center;
-    gap: 30px;
+    gap: 3.5%;
     list-style: none;
   }
 
