--- a/sass/components/webstudio/_section-4.scss
+++ b/sass/components/webstudio/_section-4.scss
@@ -1,16 +1,15 @@
 .team {
   background-color: #f5f4fa;
+  max-width: 100%;
 
   &__heading {
     @extend %h2-styles;
   }
 
-  // &__cards {
-  //   @extend %standard-center;
-  //   // width: 1170px;
-  //   height: 428px;
-  //   gap: 30px;
-  // }
+  &__cards {
+    @extend %standard-center;
+    gap: 4%;
+  }
 
   &__card {
     // @extend %standard-center;
