--- a/sass/components/webstudio/_section-5.scss
+++ b/sass/components/webstudio/_section-5.scss
@@ -1,4 +1,6 @@
 .clients {
+max-width: 100%;
+
   &__cards {
     @extend %standard-center;
     gap: 30px;
