--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -4,17 +4,18 @@
   margin: 0;
   list-style-type: none;
   font-family: 'Roboto', sans-serif;
-  max-width: 100% !important;
+  // max-width: 100% !important;
 }
 
 html {
   scroll-behavior: smooth;
-  max-width: 100% !important;
+  outline: 2px solid green;
+  // max-width: 100% !important;
   // overflow-x: hidden;
 }
 
 body {
-  max-width: 100% !important;
+  // max-width: 100% !important;
   // overflow-x: hidden;
   /* overflow: scroll; */
   /* overflow-x: hidden; */
@@ -44,5 +45,5 @@ ul {
   // width: 1170px;
   width: 80vw;
   overflow: hidden;
-  // outline: 2px solid red;
+  outline: 2px solid red;
 }
